# lambda-calculus

./: .env  Pipfile  README.md  pyproject.toml
src/lambda_calculi/: python_typing.py
src/lambda_calculi/simple/: python_typing.py
src/lambda_calculi/simple/token/: __init__.py  expression.py
src/lambda_calculi/system_f/: demo.sh  grammar.py  grammar_definition.md  grammar_definition.py  meta_grammar.py  typography.py  variable.py
src/lambda_calculi/system_f_omega/: __init__.py  demo.sh  environment.py  expression.py  grammar.py  grammar_definition.md  grammar_definition.py  inference.py  inference_definition.md  inference_definition.py  kind.py  reduction.py  type.py
src/lambda_calculi/system_f_omega/grammar/: all.py  environment.py  expression.py  kind.py  type.py
src/lambda_calculi/system_f_omega/grammar/lib/: variable_base.py
src/lambda_calculi/system_f_omega/inference/: __init__.py  expression_formation.py  type_equivalence.py  type_formation.py
src/lambda_calculi/system_f_omega/lib/: typography.py  variable_base.py
typesafety/: simple.py
